NGEO-1873: Modify map popup position to avoid overlay of "Table" button & timeslider on small screen

--- a/client/css/mapPopup.less
+++ b/client/css/mapPopup.less
@@ -7,7 +7,7 @@
 #mapPopup {
 	position: absolute;
 	right: 0;
-	top: 35%;
+	top: 10%;
 	// Customize widget : no border on right, and no radius on right
 	border-right: 0 solid black;
    .border-radiuses(8px, 0, 0, 8px);
